--- a/Godeps/_workspace/src/gopkg.in/launchdarkly/go-client.v2/circle.yml
+++ b/Godeps/_workspace/src/gopkg.in/launchdarkly/go-client.v2/circle.yml
@@ -3,12 +3,10 @@ dependencies:
     - rm -rf ~/.go_workspace/src/github.com/launchdarkly/go-client
     - mkdir -p ~/.go_workspace/src/github.com/launchdarkly/
     - ln -s ~/go-client ~/.go_workspace/src/github.com/launchdarkly/go-client
-    - go get gopkg.in/tools/godep.v74 # lock down our version of godep
-    - go version
-    - godep version
+    - go get github.com/tools/godep
   override:
     - godep go build ./...
 
 test:
   override:
-    - godep go test ./...
+    - godep go test ./... -v
