Make LD relay optionally behave like LD daemon

--- a/deb-contents/etc/ld-relay.conf
+++ b/deb-contents/etc/ld-relay.conf
@@ -8,11 +8,22 @@ port = 8030
 ; has timeouts
 heartbeatIntervalSecs = 15
 
+
+; You can pass in an optional Redis configuration,
+; where ld-relay can persist its flag data. This provides extra 
+; durability for ld-relay. 
+; [redis]
+; host = "localhost"
+; port = 6379
+
 ; You can configure LDR to synchronize as many environments as you want,
-; even across different projects.
+; even across different projects. If using Redis to persist flag data,
+; you must specify a distinct Redis key prefix for each environment. All
+; keys for this environment in Redis will start with this prefix.
 
 [environment "Default Project Production"]
 apiKey = "YOUR_PRODUCTION_API_KEY"
+; prefix = "ld:default:prod"
 
 [environment "Default Project Test"]
 apiKey = "YOUR_TEST_API_KEY"
