Finish renaming ttl param. Make Version a var.

--- a/deb-contents/etc/ld-relay.conf
+++ b/deb-contents/etc/ld-relay.conf
@@ -15,7 +15,7 @@ heartbeatIntervalSecs = 15
 ; [redis]
 ; host = "localhost"
 ; port = 6379
-; ttl = 30000
+; localTtl = 30000
 
 ; You can configure LDR to synchronize as many environments as you want,
 ; even across different projects. If using Redis to persist flag data,
