--- a/Godeps/_workspace/src/github.com/launchdarkly/go-client/circle.yml
+++ b/Godeps/_workspace/src/github.com/launchdarkly/go-client/circle.yml
@@ -4,6 +4,7 @@ dependencies:
     - mkdir -p ~/.go_workspace/src/github.com/launchdarkly/
     - ln -s ~/go-client ~/.go_workspace/src/github.com/launchdarkly/go-client
     - go get gopkg.in/tools/godep.v74 # lock down our version of godep
+    - ln -sf ~/.go_workspace/bin/godep.v74 ~/.go_workspace/bin/godep
     - go version
     - godep version
   override:
