--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
 
     steps:
       - checkout
+      - setup_remote_docker
 
       - run: go get -u $COMMON_GO_PACKAGES
       - run: go version
