re-add generation of cross-compiled artifacts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,16 @@ jobs:
       - run: docker cp builder:/go/src/github.com/launchdarkly/ld-relay/ldr .
       - run: docker build -t "ld-relay:$CIRCLE_BUILD_NUM" .
 
+      - run: mkdir -p /artifacts
+      - run:
+          name: generate all binaries
+          command: ./scripts/package.sh
+          environment:
+            CIRCLE_ARTIFACTS: /artifacts
+
+      - store_artifacts:
+          path: /artifacts
+      
       - deploy:
           name: Push docker image
           command: |
