--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -42,9 +42,9 @@
   name = "github.com/launchdarkly/gcfg"
 
 [[constraint]]
-  branch = "v3-summary-events"
-  name = "gopkg.in/launchdarkly/go-client.v3"
-  source = "git@github.com:launchdarkly/go-client-private.git"
+  branch = "v4"
+  name = "gopkg.in/launchdarkly/go-client.v4"
+  source = "git@github.com:launchdarkly/go-client.git"
 
 [prune]
   go-tests = true
