Don't check git tags when running release.
Git tag may not be up-to-date until we tag the new release.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -91,7 +91,7 @@ jobs:
       - checkout
       - setup_remote_docker  # start docker engine
       - run: sudo apt-get install rpm
-      - run: make test-release
+      - run: make release
       - run: make test-debian
       - run: make test-centos
       - run: make test-docker
