--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -92,9 +92,7 @@ jobs:
       - setup_remote_docker  # start docker engine
       - run: sudo apt-get install rpm
       - run: make release
-      - run: make test-debian
-      - run: make test-centos
-      - run: make test-docker
+      - run: make integration-test
       - store_artifacts:
           path: dist/
 
