--- a/expected.conf
+++ b/expected.conf
@@ -7,7 +7,7 @@ port = 8030
 heartbeatIntervalSecs = 15
 
 [environment "test"]
-apiKey = "sdk-test-sdkKey"
+sdkKey = "sdk-test-sdkKey"
 mobileKey = ""
 envId = ""
 
