Replace go-client usage with go-server-sdk and fix some build breakages (#83)
* Use the go-server-sdk package

* trying to fix the apt-get error

* fix goreleaser error

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,6 +90,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker  # start docker engine
+      - run: sudo apt-get update
       - run: sudo apt-get install rpm
       - run: make release
       - run: make integration-test
@@ -104,6 +105,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker  # start docker engine
+      - run: sudo apt-get update
       - run: sudo apt-get install rpm
       - run:
           name: Releasing and publishing
