--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -38,9 +38,8 @@
   name = "github.com/launchdarkly/gcfg"
 
 [[constraint]]
-  branch = "v4"
   name = "gopkg.in/launchdarkly/go-server-sdk.v4"
-  source = "github.com/launchdarkly/go-server-sdk-private"
+  version = "4.8.2"
 
 [[override]]
   name = "github.com/Azure/go-ntlmssp"
