--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -39,9 +39,7 @@
 
 [[constraint]]
   name = "gopkg.in/launchdarkly/go-server-sdk.v4"
-  source = "github.com/launchdarkly/go-server-sdk-private"
-  branch = "eb/ch43336/ntlm-proxy"
-  #version = "4.8.2"
+  version = "4.9.0"
 
 [prune]
   go-tests = true
