fix test of config file generation

--- a/expected.conf
+++ b/expected.conf
@@ -1,7 +1,7 @@
 
 [main]
-streamUri = "https://stream.launchdarkly.com"
-baseUri = "https://app.launchdarkly.com"
+streamUri = ""
+baseUri = ""
 exitOnError = false
 port = 8030
 heartbeatIntervalSecs = 15
