allow relay to be configured with environment vars and no file (#91)
* allow relay to be configured with environment vars and no file

* remove Docker script, use vars directly

* update goreleaser Dockerfile to match main Dockerfile

* rm another obsolete file reference

* allow both file and vars

* describe new parameter in readme

* rm obsolete test of Docker conf file

* typo

* try making output from test job visible

* DataDog address parameters shouldn't be nullable

* comments

* don't background the job, do display logs

* better config logic that's more backward-compatible

* update readme for new config behavior

* misc fixes + tests

* optional file syntax for full backward-compatibility in Docker

* add some variables we forgot to support

* add another variable we forgot to support

* fix command line

* misc cleanup

* major rewrite of readme: config options, examples, copyedit (#92)

* change syntax for optional config file

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -52,5 +52,5 @@ dockers:
     - latest
     # If your Dockerfile copies files other than the binary itself,
     # you should list them here as well.
-    extra_files:
-    - docker-entrypoint.sh
+    # extra_files:
+    # - filename
