--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,6 @@ defaults:
     CIRCLE_ARTIFACTS: /tmp/circle-artifacts
     COMMON_GO_PACKAGES: >
       github.com/jstemmer/go-junit-report
-      github.com/kyoh86/richgo
     DISABLE_LINT: 1  # golangci-lint is currently broken for this project (ch44169)
 
   build_steps: &build_steps
@@ -43,7 +42,7 @@ defaults:
             if [ -z "$DISABLE_COVERAGE" ]; then
               go_cover_args="-covermode=atomic -coverpkg=./... -coverprofile /tmp/circle-artifacts/coverage.txt"
             fi
-            go test -race $go_cover_args -v $(go list ./... | grep -v /vendor/) | tee >(richgo testfilter) > $CIRCLE_ARTIFACTS/report.txt
+            go test -race $go_cover_args -v $(go list ./... | grep -v /vendor/) | tee $CIRCLE_ARTIFACTS/report.txt
             if [[ -z "$DISABLE_COVERAGE" && -n "$CC_TEST_REPORTER_ID" ]]; then
               ./cc-test-reporter format-coverage $CIRCLE_ARTIFACTS/coverage.txt -t gocov --output $CIRCLE_ARTIFACTS/coverage.json
               ./cc-test-reporter upload-coverage --input $CIRCLE_ARTIFACTS/coverage.json
