add CI test for Prometheus exporter (#106)
* add CI test for Prometheus exporter

* build first

* fix nc syntax

* fix grep text

* debugging

* clarify readme

Co-authored-by: Ben Woskow <48036130+bwoskow-ld@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,6 +55,9 @@ defaults:
             fi
           when: always
       - run:
+          name: Run Prometheus endpoint test
+          command: ./scripts/test-prometheus-endpoint.sh
+      - run:
           name: lint
           command: |
             if [ -z "$DISABLE_LINT" ]; then
