--- a/linux/etc/ld-relay.conf
+++ b/linux/etc/ld-relay.conf
@@ -3,28 +3,27 @@ streamUri = "https://stream.launchdarkly.com"
 baseUri = "https://app.launchdarkly.com"
 exitOnError = false
 port = 8030
-; You can tell the relay to send heartbeats every few seconds
-; which can be useful if you have an intermediate proxy (e.g. a load balancer) that
-; has timeouts
-heartbeatIntervalSecs = 15
+; You can tell the Relay Proxy to send heartbeats every few seconds, which
+; can be useful if you have an intermediate proxy (e.g. a load balancer) that
+; has timeouts.
+heartbeatInterval = 15s
 
 
-; You can pass in an optional Redis configuration,
-; where ld-relay can persist its flag data. This provides extra 
-; durability for ld-relay. 
+; You can pass in an optional Redis configuration, where the Relay Proxy
+; can persist its flag data. This provides extra durability.
 ; [redis]
 ; host = "localhost"
 ; port = 6379
-; localTtl = 30000
+; localTtl = 30s
 
-; You can configure LDR to synchronize as many environments as you want,
-; even across different projects. If using Redis to persist flag data,
-; you must specify a distinct Redis key prefix for each environment. All
-; keys for this environment in Redis will start with this prefix.
+; You can configure the Relay Proxy to synchronize as many environments as
+; you want, even across different projects. If using Redis to persist flag
+; data, you must specify a distinct Redis key prefix for each environment.
+; All keys for this environment in Redis will start with this prefix.
 
 [environment "Default Project Production"]
-apiKey = "YOUR_PRODUCTION_API_KEY"
+sdkKey = "YOUR_PRODUCTION_API_KEY"
 ; prefix = "ld:default:prod"
 
 [environment "Default Project Test"]
-apiKey = "YOUR_TEST_API_KEY"
+sdkKey = "YOUR_TEST_API_KEY"
