--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,6 +27,10 @@ linter-settings:
     simplify: false
 
 issues:
+  exclude-rules:
+    - path: core/sharedtest/
+      linters:
+        - golint  # don't need linter warnings about comment formatting etc. on our test helpers
   exclude:
     # golint exclusions
     - "(const|func|method|struct field|type|var) .* should be " # golint errors about variable names (don't want to fix them because they're in a public interface)
@@ -35,13 +39,6 @@ issues:
     - "should have comment or be unexported" # TODO: label everything that is exported when relay becomes a library
     - "ST1005: error strings should not be capitalized"
     - "ST1000: at least one file in a package should have a package comment"
-    # Relay accesses some Go SDK types and methods directly that are deprecated to discourage applications from relying on them;
-    # these will be replaced in the next major versions of Go SDK and Relay
-    - "SA1019: ld.FeatureFlag is deprecated.*"
-    - "SA1019: ld.Features is deprecated.*"
-    - "SA1019: ld.Segment is deprecated.*"
-    - "SA1019: ld.Segments is deprecated.*"
-    - "SA1019: flag.EvaluateDetail is deprecated.*"
   exclude-use-default: false
   max-same-issues: 1000
   max-per-linter: 1000
