--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,22 +11,22 @@ workflows:
     jobs:
       - go-test:
           name: Go 1.14
-          docker-image: cimg/go:1.14
+          docker-image: circleci/golang:1.14
           run-lint: true
           test-coverage: true
           test-tls: true
       - go-test:
           name: Go 1.13
-          docker-image: cimg/go:1.13
+          docker-image: circleci/golang:1.13
           run-lint: true
           test-tls: true
       - go-test:
           name: Go 1.12
-          docker-image: cimg/go:1.12
+          docker-image: circleci/golang:1.12
           test-tls: true
       - go-test:
           name: Go 1.11
-          docker-image: cimg/go:1.11
+          docker-image: circleci/golang:1.11
           test-tls: true
       - go-test:
           name: Go 1.10
