--- a/.golangci.yml
+++ b/.golangci.yml
@@ -58,6 +58,11 @@ issues:
         - goconst
         - gochecknoglobals
         - golint
+    - path: enterprise/ld-relay-enterprise.go  # temporary exclusion because linter is confused by two command-line entry points
+      linters:
+        - deadcode
+        - golint
+        - unused
   exclude-use-default: false
   max-same-issues: 1000
   max-per-linter: 1000
