--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,16 +14,20 @@ workflows:
           docker-image: circleci/golang:1.14
           run-lint: true
           test-coverage: true
+          test-tls: true
       - go-test:
           name: Go 1.13
           docker-image: circleci/golang:1.13
           run-lint: true
+          test-tls: true
       - go-test:
           name: Go 1.12
           docker-image: circleci/golang:1.12
+          test-tls: true
       - go-test:
           name: Go 1.11
           docker-image: circleci/golang:1.11
+          test-tls: true
       - go-test:
           name: Go 1.10
           docker-image: circleci/golang:1.10
@@ -54,7 +58,10 @@ jobs:
       test-coverage:
         type: boolean
         default: false
-  
+      test-tls:
+        type: boolean
+        default: false  # older CircleCI images don't support using a recent enough curl version
+    
     docker:
       - image: <<parameters.docker-image>>
         environment: &environment
@@ -113,6 +120,12 @@ jobs:
             - run:
                 name: Generate coverage report
                 command: go tool cover -html=$CIRCLE_ARTIFACTS/coverage.txt -o $CIRCLE_ARTIFACTS/coverage.html
+      - when:
+          condition: <<parameters.test-tls>>
+          steps:
+            - run:
+                name: Run TLS version test
+                command: ./scripts/test-tls.sh
       - run:
           name: Run Prometheus endpoint test
           command: ./scripts/test-prometheus-endpoint.sh
