Revert "(v6 - #3) remove config package from this repo, use ld-relay-config instead (#168)"
This reverts commit 33161f5cdb3cb2ff14b472b9dec0b17f7c4c89dc.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,8 +50,7 @@ jobs:
           CIRCLE_ARTIFACTS: /tmp/circle-artifacts
           COMMON_GO_PACKAGES: >
             github.com/jstemmer/go-junit-report
-          GOPRIVATE: github.com/launchdarkly/*-private
-    
+
     steps:
       - checkout
       - run: go get -u $COMMON_GO_PACKAGES
@@ -128,7 +127,7 @@ jobs:
       - run: sudo apt-get update
       - run: sudo apt-get install rpm
       - run: make release
-      - run: ./scripts/maybe-integration-test.sh
+      - run: make integration-test
       - store_artifacts:
           path: dist/
 
