update _testservice code to be buildable in old Gos

--- a/_testservice/Makefile
+++ b/_testservice/Makefile
@@ -1,5 +1,10 @@
 
 .PHONY: build
 
+BUILD_DIR=$(GOPATH)/src/github.com/launchdarkly/testservice
+
 build:
-	go build -o testservice
+	mkdir -p $(BUILD_DIR)
+	cp -r * $(BUILD_DIR)
+	cd $(BUILD_DIR) && go build -o testservice
+	cp $(BUILD_DIR)/testservice .
